--- a/src/components/CustomTable/style.scss
+++ b/src/components/CustomTable/style.scss
@@ -1,6 +1,8 @@
 .table_container {
-    // width: max-content;
-    // height: max-content;
+
+    width: 100%;
+    height: max-content;
+
     .table_content {
         .ant-table-container {
             .ant-table-header {
@@ -13,41 +15,47 @@
             }
         }
     }
+
     .table_pagination {
         display: flex;
         justify-content: center;
         align-items: center;
         margin-top: 20px;
+
         .ant-pagination {
             li:first-child {
-                a{
+                a {
                     border-top-left-radius: 4px;
                     border-bottom-left-radius: 4px;
                 }
             }
+
             li:last-child {
-                a{
+                a {
                     border-top-right-radius: 4px;
                     border-bottom-right-radius: 4px;
                 }
             }
-            li:not(li.ant-pagination-disabled):not(li.ant-pagination-item-active) > a:hover {
+
+            li:not(li.ant-pagination-disabled):not(li.ant-pagination-item-active)>a:hover {
                 z-index: 2;
                 color: #23527c;
                 background-color: #eee;
                 border-color: #ddd;
             }
-            
-            li.ant-pagination-prev.ant-pagination-disabled{
-                a{
+
+            li.ant-pagination-prev.ant-pagination-disabled {
+                a {
                     color: #777;
                     background-color: #fff;
                     border-color: #ddd;
                 }
             }
+
             li {
                 border: none;
                 margin-inline-end: 0px;
+
                 a {
                     position: relative;
                     float: left;
@@ -60,8 +68,9 @@
                     border: 1px solid #ddd;
                 }
             }
-            .ant-pagination-item-active{
-                a{
+
+            .ant-pagination-item-active {
+                a {
                     font-weight: normal;
                     z-index: 3;
                     color: #fff;
@@ -70,13 +79,14 @@
                     border-color: #337ab7;
                 }
             }
-            li.ant-pagination-next.ant-pagination-disabled{
-                a{
+
+            li.ant-pagination-next.ant-pagination-disabled {
+                a {
                     color: #777;
                     background-color: #fff;
                     border-color: #ddd;
                 }
-            }    
+            }
         }
     }
 }
