--- a/src/pages/DocumentApproval/style.scss
+++ b/src/pages/DocumentApproval/style.scss
@@ -2,9 +2,9 @@
     margin-top: 15px;
     margin-right: -20px;
     // padding-right: 15px;
-    // height: calc(100vh - 247px);
-    overflow-y: auto;
-    overflow-x: hidden;
+    height: calc(100vh - 247px);
+    // overflow-y: auto;
+    // overflow-x: hidden;
     width: 100%;
     // height: max-content;
 }
