--- a/src/components/CustomTable/style.scss
+++ b/src/components/CustomTable/style.scss
@@ -1,7 +1,7 @@
 .table_container {
 
-    width: 100%;
-    height: max-content;
+    // width: 100%;
+    // height: 100%;
 
     .table_content {
         .ant-table-container {
