done new approval desgin

--- a/src/layouts/main/MainStyle.scss
+++ b/src/layouts/main/MainStyle.scss
@@ -4,8 +4,7 @@
 
 .layout-container {
     display: flex;
+    padding-bottom: 30px;
 }
 
-.footer-layout {
-    margin-top: 30px;
-}
+.footer-layout {}
