--- a/src/layouts/main/MainStyle.scss
+++ b/src/layouts/main/MainStyle.scss
@@ -9,6 +9,7 @@
     width: 100%;
 
     .container-body {
+        width: 100%;
         .body-main {
             padding-top: 10px;
             padding-left: 20px;
