--- a/src/components/TitleBody/style.scss
+++ b/src/components/TitleBody/style.scss
@@ -3,9 +3,10 @@
     justify-content: space-between;
     background-color: #f5f6fa;
     border-bottom: 1px solid #e1e1e1;
-    margin-left: -13px;
-    margin-right: -13px;
+    margin-left: -15px;
+    margin-right: -15px;
     // margin-bottom: 20PX;
+    margin-top: -10px;
     min-height: 61px;
     align-items: center;
     // padding-left: 20px;
@@ -49,9 +50,10 @@
     justify-content: space-between;
     background-color: #f5f6fa;
     border-bottom: 1px solid #e1e1e1;
-    margin-left: -13px;
-    margin-right: -13px;
-    margin-bottom: 20PX;
+    margin-left: -15px;
+    margin-right: -15px;
+    // margin-bottom: 20PX;
+    margin-top: -10px;
     min-height: 61px;
     align-items: center;
     padding-left: 20px;
