--- a/src/layouts/main/MainStyle.scss
+++ b/src/layouts/main/MainStyle.scss
@@ -1,22 +1,41 @@
 .layout-wrapper {
     min-width: calc(100%/3);
 }
-
+::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+}
+::-webkit-scrollbar-thumb {
+    background: #5aa75e;
+    border-radius: 5px;
+}
+::-webkit-scrollbar-track {
+    background-color: #cfd1d2;
+    box-shadow: inset 0 0 2px #bbb;
+}
 .layout-container {
     display: flex;
-    padding-bottom: 30px;
-    min-height: 100vh;
+    // padding-bottom: 30px;
+    // min-height: 100vh;
     width: 100%;
 
     .container-body {
-        width: 100%;
-        .body-main {
-            // padding-top: 10px;
-            padding-left: 20px;
-            padding-right: 20px;
+        width: calc(100% - 230px);
+        .page-scroll {
+            .main-content{
+                padding: 10px 20px;
+                transition: all 0.3s;
+                background-color: #ffffff;
+            }
         }
     }
-
 }
-
+@media only screen and (min-device-width: 768px)
+{
+    .page-scroll {
+        height: calc(100vh - 80px);
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+}
 // .footer-layout {}
