--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -2,10 +2,12 @@
     width: 230px;
     background: #f4f4f4;
     font-size: 14px;
-    transition: all 0.3s;
+    transition: all 0.5s;
     border-top: none;
-    position: relative;
+    // position: relative;
     height: 100%;
+    background-color: #1d2a34;
+    ;
 
     .page-scroll {
         // background-color: #1D2A34;
@@ -13,14 +15,5 @@
         // overflow-y: auto;
         // overflow-x: hidden;
         background-color: #1D2A34;
-    }
-}
-@media only screen and (min-device-width: 768px)
-{
-    .sidebar {
-        height: 100%;
-    }
-    .list-menu {
-        margin-bottom: 43px;
     }
 }
