--- a/src/layouts/main/MainStyle.scss
+++ b/src/layouts/main/MainStyle.scss
@@ -1,41 +1,111 @@
 .layout-wrapper {
-    min-width: calc(100%/3);
-}
-::-webkit-scrollbar {
-    width: 7px;
-    height: 7px;
-}
-::-webkit-scrollbar-thumb {
-    background: #5aa75e;
-    border-radius: 5px;
-}
-::-webkit-scrollbar-track {
-    background-color: #cfd1d2;
-    box-shadow: inset 0 0 2px #bbb;
-}
-.layout-container {
-    display: flex;
-    // padding-bottom: 30px;
-    // min-height: 100vh;
-    width: 100%;
+    height: 100vh;
+    min-width: 481px;
 
-    .container-body {
-        width: calc(100% - 230px);
-        .page-scroll {
-            .main-content{
-                padding: 10px 20px;
-                transition: all 0.3s;
-                background-color: #ffffff;
+    .layout-container {
+        display: flex;
+        // padding-bottom: 30px;
+        min-height: calc(100vh - 50px);
+        width: 100%;
+        position: relative;
+    }
+
+    .layout-footer {
+        width: 100%;
+    }
+}
+
+@media (max-width:767px) {
+    .layout-wrapper {
+        min-width: calc(100%/3);
+        max-height: 100vh;
+    }
+
+    ::-webkit-scrollbar {
+        width: 7px;
+        height: 7px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: #5aa75e;
+        border-radius: 5px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background-color: #cfd1d2;
+        box-shadow: inset 0 0 2px #bbb;
+    }
+
+    .layout-container {
+        display: flex;
+        // padding-bottom: 30px;
+        min-height: calc(100vh - 50px);
+        width: 100%;
+
+        .container-body {
+            width: calc(100% - 230px);
+
+            .page-scroll {
+                .main-content {
+                    padding: 10px 20px;
+                    transition: all 0.3s;
+                    background-color: #ffffff;
+                }
             }
+        }
+
+        .container-sidebar {
+            // height: 100%;
         }
     }
 }
-@media only screen and (min-device-width: 768px)
-{
+
+
+
+@media only screen and (min-device-width: 768px) {
     .page-scroll {
         height: calc(100vh - 80px);
         overflow-y: auto;
         overflow-x: hidden;
     }
+
+    .layout-wrapper {
+        min-width: calc(100%/3);
+    }
+
+    ::-webkit-scrollbar {
+        width: 7px;
+        height: 7px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: #5aa75e;
+        border-radius: 5px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background-color: #cfd1d2;
+        box-shadow: inset 0 0 2px #bbb;
+    }
+
+    .layout-container {
+        display: flex;
+        // padding-bottom: 30px;
+        // min-height: 100vh;
+        width: 100%;
+
+        .container-body {
+            width: calc(100% - 230px);
+
+            .page-scroll {
+                .main-content {
+                    padding: 10px 20px;
+                    transition: all 0.3s;
+                    background-color: #ffffff;
+                }
+            }
+        }
+    }
 }
+
 // .footer-layout {}
