--- a/src/components/ButtonFilter/style.scss
+++ b/src/components/ButtonFilter/style.scss
@@ -14,6 +14,7 @@
     padding: 20px;
     width: 300px;
     max-height: 700px;
+    max-height: 80vh;
     /* Thiết lập chiều cao tối đa */
     overflow-y: auto;
 
