--- a/src/components/CustomTable/style.scss
+++ b/src/components/CustomTable/style.scss
@@ -4,36 +4,42 @@
     padding-right: 15px;
     height: calc(100vh - 247px);
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: auto;
+
     .table_container {
 
         // min-width: 550px;
         .table_content {
             .ant-table-container {
                 .ant-table-content {
-                    table{
+                    table {
                         width: 100%;
                         max-width: 100%;
                         margin-bottom: 20px;
                     }
-                    .ant-table-thead > tr > th,.ant-table-tbody > tr > td{
+
+                    .ant-table-thead>tr>th,
+                    .ant-table-tbody>tr>td {
                         padding: 8px;
                         line-height: 1.42857143;
                         vertical-align: top;
                     }
-                    .ant-table-thead{
-                        tr > th{
+
+                    .ant-table-thead {
+                        tr>th {
                             vertical-align: bottom;
                         }
-                        tr:first-child >*:first-child,tr:first-child >*:last-child
-                        {
+
+                        tr:first-child>*:first-child,
+                        tr:first-child>*:last-child {
                             border-radius: 0px;
                         }
                     }
-                    .ant-table-tbody>tr:first-child>td
-                    {
+
+                    .ant-table-tbody>tr:first-child>td {
                         border-top: none;
                     }
+
                     .ant-table-thead {
                         .ant-table-cell {
                             border-bottom: none;
@@ -41,7 +47,8 @@
                             color: #A3A6B4;
                         }
                     }
-                    .ant-table-row{
+
+                    .ant-table-row {
                         font-weight: bold;
                     }
                 }
