--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,77 +1,140 @@
-.header {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    background-color: #167c82;
-    justify-content: space-between;
-
-
-    .header-left {
-        // text-align: center;
-        align-items: center;
-
-        .header-menu {
-            line-height: 50px;
-            padding-left: 20px;
-            padding-right: 20px;
-            margin-right: 10px;
-            background-color: #79BD43;
-            // border: 1px solid red;
-
-        }
-
-        .header-brand {
-            padding-left: 6px;
-            padding-right: 36px;
-            padding-top: 4px;
-            padding-bottom: 8px;
-            border-right: 1px solid #bbb;
-            ;
-        }
-
-        .header-span {
-            color: white;
-            font-size: 17px;
-            font-weight: 400;
-            padding: 13px 10px;
-        }
-    }
-
-    .header-right {
-        align-items: center;
-
-        .icon-more,
-        .header-icon {
-            font-size: 25px;
-            color: #fff;
-            position: relative;
-            padding-left: 12px;
-            padding-right: 10px;
-            padding-top: 8px;
-            padding-bottom: 10px;
-        }
-
-
-        .ant-image {
-            width: 40px;
-            color: #fff;
-            position: relative;
-            margin-right: 10px;
-            margin-left: 12px;
-        }
-
-    }
-
-}
-
 @media (max-width:767px) {
-    .header-icon {
-        display: none;
+    .header {
+        width: 100%;
+        height: 50px;
+        display: flex;
+        background-color: #167c82;
+        justify-content: space-between;
+        position: fixed;
+        z-index: 999;
+
+
+
+        .header-left {
+            // text-align: center;
+            align-items: center;
+
+            .header-menu {
+                line-height: 50px;
+                padding-left: 20px;
+                padding-right: 20px;
+                margin-right: 10px;
+                background-color: #79BD43;
+                // border: 1px solid red;
+
+            }
+
+            .header-brand {
+                padding-left: 6px;
+                padding-right: 36px;
+                padding-top: 4px;
+                padding-bottom: 8px;
+                border-right: 1px solid #bbb;
+                ;
+            }
+
+            .header-span {
+                color: white;
+                font-size: 17px;
+                font-weight: 400;
+                padding: 13px 10px;
+            }
+        }
+
+        .header-right {
+            align-items: center;
+
+            .icon-more,
+            .header-icon {
+                font-size: 25px;
+                color: #fff;
+                position: relative;
+                padding-left: 12px;
+                padding-right: 10px;
+                padding-top: 8px;
+                padding-bottom: 10px;
+            }
+
+
+            .ant-image {
+                width: 40px;
+                color: #fff;
+                position: relative;
+                margin-right: 10px;
+                margin-left: 12px;
+            }
+
+        }
+
     }
+
 }
 
 @media (min-width:768px) {
-    .icon-more {
-        display: none;
+    .header {
+        width: 100%;
+        height: 50px;
+        display: flex;
+        background-color: #167c82;
+        justify-content: space-between;
+
+
+        .header-left {
+            // text-align: center;
+            align-items: center;
+
+            .header-menu {
+                line-height: 50px;
+                padding-left: 20px;
+                padding-right: 20px;
+                margin-right: 10px;
+                background-color: #79BD43;
+                // border: 1px solid red;
+
+            }
+
+            .header-brand {
+                padding-left: 6px;
+                padding-right: 36px;
+                padding-top: 4px;
+                padding-bottom: 8px;
+                border-right: 1px solid #bbb;
+                ;
+            }
+
+            .header-span {
+                color: white;
+                font-size: 17px;
+                font-weight: 400;
+                padding: 13px 10px;
+            }
+        }
+
+        .header-right {
+            align-items: center;
+
+            .icon-more,
+            .header-icon {
+                font-size: 25px;
+                color: #fff;
+                position: relative;
+                padding-left: 12px;
+                padding-right: 10px;
+                padding-top: 8px;
+                padding-bottom: 10px;
+            }
+
+
+            .ant-image {
+                width: 40px;
+                color: #fff;
+                position: relative;
+                margin-right: 10px;
+                margin-left: 12px;
+            }
+
+        }
+
     }
+
 }
