--- a/src/components/TitleBody/style.scss
+++ b/src/components/TitleBody/style.scss
@@ -1,99 +1,220 @@
-.titlebody-form {
-    display: flex;
-    justify-content: space-between;
-    background-color: #f5f6fa;
-    border-bottom: 1px solid #e1e1e1;
-    margin-left: -15px;
-    margin-right: -15px;
-    // margin-bottom: 20PX;
-    margin-top: -10px;
-    min-height: 61px;
-    align-items: center;
-    // padding-left: 20px;
-    // padding-right: 20px;
+@media (max-width:767px) {
+    .titlebody-form {
+        display: flex;
+        top: 0;
+        width: 100%;
+        justify-content: space-between;
+        background-color: #f5f6fa;
+        border-bottom: 1px solid #e1e1e1;
+        margin-left: -20px;
+        margin-right: -15px;
+        margin-top: 50px;
+        min-height: 61px;
+        align-items: center;
+        z-index: 999;
+        position: fixed;
 
 
-    .titlebody-left {
-        font-weight: bold;
-        font-size: 14px;
 
-        >a {
-            padding-left: 10px;
-            padding-right: 10px;
-            color: #8894A1;
-            text-decoration: none;
 
-            &:hover,
-            :active,
-            :focus {
+
+        .titlebody-left {
+            font-weight: bold;
+            font-size: 14px;
+
+            >a {
+                padding-left: 10px;
+                padding-right: 10px;
+                color: #8894A1;
                 text-decoration: none;
-                outline: none;
-                transition: all 0.3s;
-                cursor: pointer;
-                color: #333;
+
+                &:hover,
+                :active,
+                :focus {
+                    text-decoration: none;
+                    outline: none;
+                    transition: all 0.3s;
+                    cursor: pointer;
+                    color: #333;
+
+                }
+
+
+                .anticon {
+                    padding-right: 5px;
+                }
+
+            }
+        }
+
+        // .titlebody-right {}
+    }
+
+    .titlebody-nonform {
+        display: flex;
+        justify-content: space-between;
+        background-color: #f5f6fa;
+        border-bottom: 1px solid #e1e1e1;
+        margin-left: -20px;
+        margin-right: -20px;
+        // margin-bottom: 20PX;
+        margin-top: 40px;
+        min-height: 61px;
+        align-items: center;
+        padding-left: 20px;
+        padding-right: 20px;
+
+
+        .titlebody-left {
+            display: none;
+
+        }
+
+        .titlebody-right {
+            display: flex;
+            width: 100%;
+            justify-content: flex-end;
+
+
+            .ant-btn {
+                font-weight: bold;
+                margin-left: 10PX;
+            }
+
+            .link-create {
+                margin-left: 10px;
+                background-color: #5cb85c;
+                color: #FFF;
+                text-decoration: none;
+                padding-top: 4PX;
+                padding-bottom: 7PX;
+                border-radius: 5PX;
+
+                // font-size: 16;
+                .anticon {
+                    margin-right: 8PX;
+                }
 
             }
 
-
-            .anticon {
-                padding-right: 5px;
+            >a,
+            .ant-typography {
+                padding-left: 10px;
+                padding-right: 10px;
+                color: #8894A1;
+                font-weight: bold;
             }
-
         }
     }
 
-    // .titlebody-right {}
 }
 
-.titlebody-nonform {
-    display: flex;
-    justify-content: space-between;
-    background-color: #f5f6fa;
-    border-bottom: 1px solid #e1e1e1;
-    margin-left: -15px;
-    margin-right: -15px;
-    // margin-bottom: 20PX;
-    margin-top: -10px;
-    min-height: 61px;
-    align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
+@media (min-width:768px) {
+    .titlebody-form {
+        display: flex;
+        top: 0;
+        width: 100%;
+        justify-content: space-between;
+        background-color: #f5f6fa;
+        border-bottom: 1px solid #e1e1e1;
+        margin-left: -20px;
+        margin-right: -15px;
+        margin-top: 50px;
+        min-height: 61px;
+        align-items: center;
+        z-index: 999;
+        position: fixed;
 
 
-    .titlebody-left {
-        font-weight: bold;
-        font-size: 20px;
 
+
+
+        .titlebody-left {
+            font-weight: bold;
+            font-size: 14px;
+
+            >a {
+                padding-left: 10px;
+                padding-right: 10px;
+                color: #8894A1;
+                text-decoration: none;
+
+                &:hover,
+                :active,
+                :focus {
+                    text-decoration: none;
+                    outline: none;
+                    transition: all 0.3s;
+                    cursor: pointer;
+                    color: #333;
+
+                }
+
+
+                .anticon {
+                    padding-right: 5px;
+                }
+
+            }
+        }
+
+        // .titlebody-right {}
     }
 
-    .titlebody-right {
-        .ant-btn {
+    .titlebody-nonform {
+        display: flex;
+        justify-content: space-between;
+        background-color: #f5f6fa;
+        border-bottom: 1px solid #e1e1e1;
+        margin-left: -15px;
+        margin-right: -15px;
+        // margin-bottom: 20PX;
+        margin-top: -10px;
+        min-height: 61px;
+        align-items: center;
+        padding-left: 20px;
+        padding-right: 20px;
+
+
+        .titlebody-left {
             font-weight: bold;
-            margin-left: 10PX;
+            font-size: 20px;
+
         }
 
-        .link-create {
-            margin-left: 10px;
-            background-color: #5cb85c;
-            color: #FFF;
-            text-decoration: none;
-            padding-top: 4PX;
-            padding-bottom: 7PX;
-            border-radius: 5PX;
+        .titlebody-right {
 
-            // font-size: 16;
-            .anticon {
-                margin-right: 8PX;
+
+            .ant-btn {
+                font-weight: bold;
+                margin-left: 10PX;
+                // width: 30%;
             }
 
-        }
+            .link-create {
 
-        >a,
-        .ant-typography {
-            padding-left: 10px;
-            padding-right: 10px;
-            color: #8894A1;
-            font-weight: bold;
+                margin-left: 10px;
+                background-color: #5cb85c;
+                color: #FFF;
+                text-decoration: none;
+                padding-top: 4PX;
+                padding-bottom: 7PX;
+                border-radius: 5PX;
+
+                // font-size: 16;
+                .anticon {
+                    margin-right: 8PX;
+                }
+
+            }
+
+            >a,
+            .ant-typography {
+                padding-left: 10px;
+                padding-right: 10px;
+                color: #8894A1;
+                font-weight: bold;
+            }
         }
     }
 }
