tiep tuc comment

--- a/src/layouts/main/MainStyle.scss
+++ b/src/layouts/main/MainStyle.scss
@@ -112,7 +112,10 @@
         width: 100%;
 
         .container-body {
-            width: calc(100% - 230px);
+            // width: calc(100% - 230px);
+            width: 100%;
+
+
 
             .page-scroll {
                 .main-content {
