--- a/src/pages/ViewDocument/style.scss
+++ b/src/pages/ViewDocument/style.scss
@@ -1,8 +1,132 @@
 @media (max-width:767px) {
-    .conment-Children {
-        width: calc(100% - 50px);
+    .viewApproval-container {
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 110px;
 
-        margin-left: 50px;
+
+        .viewInput {
+            display: flex;
+            flex-direction: column;
+            padding-bottom: 50px;
+
+            .viewInput-top {
+                padding-bottom: 20px;
+                display: flex;
+
+                // justify-content: space-between;
+                .viewInput-element {
+                    width: 24%;
+                    margin-right: 25px;
+
+                }
+            }
+
+            .viewInput-bot {
+                display: flex;
+                // justify-content: space-between;
+
+                .viewInput-element {
+                    width: 24%;
+                    margin-right: 20px;
+                }
+            }
+        }
+
+        .viewDocument {
+            width: 100%;
+
+            >div {
+                padding-bottom: 20PX;
+            }
+
+            .viewDocument-content {
+                .ant-viewInput {
+                    height: 100px;
+                }
+            }
+        }
+    }
+
+    .viewSignapproval-container {
+        padding: 20px;
+
+
+
+    }
+
+    .comment {
+        display: flex;
+        flex-direction: column;
+
+        .commentInput {
+            width: 100%;
+
+        }
+
+        .commentShow {
+
+            .commentGroup {
+
+                .commentParent {
+                    width: 100%;
+
+                    .comment-element {
+                        display: flex;
+                        // align-items: center;
+                        padding: 10px 0;
+
+                        .comment-avarta {
+                            margin-right: 10px;
+                        }
+
+                        .comment-body {
+                            // margin-top: -10PX;
+                            width: 100%;
+
+                            .comment-bodyTitle {
+                                font-weight: bold;
+                                margin-right: 20px;
+                            }
+                        }
+
+                    }
+                }
+
+                .conment-Children {
+                    width: calc(100% - 50px);
+
+                    margin-left: 50px;
+
+                    .comment-element {
+                        display: flex;
+                        // align-items: center;
+                        padding: 10px 0;
+
+                        .comment-avarta {
+                            margin-right: 10px;
+                        }
+
+                        .comment-body {
+                            // margin-top: -10PX;
+                            width: 100%;
+                            margin-left: 10px;
+                            overflow-x: auto;
+                            // overflow-y: auto;
+
+
+                            .comment-bodyTitle {
+                                font-weight: bold;
+                                margin-right: 20px;
+                            }
+                        }
+
+                    }
+                }
+
+
+            }
+        }
     }
 
 }
@@ -11,6 +135,8 @@
     .viewApproval-container {
         padding-left: 20px;
         padding-right: 20px;
+        padding-top: 60px;
+
 
         .viewInput {
             display: flex;
@@ -59,28 +185,24 @@
         padding: 20px;
 
 
-        .comment {
-            display: flex;
-            flex-direction: column;
 
-            .commentInput {
-                width: 70%;
+    }
 
-            }
+    .comment {
+        display: flex;
+        flex-direction: column;
 
-            .commentShow {
+        .commentInput {
+            width: 70%;
 
-                .commentGroup {
+        }
 
-                    .commentParent {
-                        width: 60%;
-                    }
+        .commentShow {
 
-                    .conment-Children {
-                        width: calc(60% - 50px);
+            .commentGroup {
 
-                        margin-left: 50px;
-                    }
+                .commentParent {
+                    width: 60%;
 
                     .comment-element {
                         display: flex;
@@ -94,10 +216,48 @@
                         .comment-body {
                             // margin-top: -10PX;
                             width: 100%;
+
+                            .comment-bodyTitle {
+                                font-weight: bold;
+                                margin-right: 20px;
+                            }
                         }
 
                     }
                 }
+
+                .conment-Children {
+                    width: calc(60% - 50px);
+
+                    margin-left: 50px;
+
+                    .comment-element {
+                        display: flex;
+                        // align-items: center;
+                        padding: 10px 0;
+
+                        .comment-avarta {
+                            margin-right: 10px;
+                        }
+
+                        .comment-body {
+                            // margin-top: -10PX;
+                            width: 100%;
+                            margin-left: 10px;
+                            overflow-x: auto;
+                            // overflow-y: auto;
+
+
+                            .comment-bodyTitle {
+                                font-weight: bold;
+                                margin-right: 20px;
+                            }
+                        }
+
+                    }
+                }
+
+
             }
         }
     }
