--- a/src/components/ButtonFilter/style.scss
+++ b/src/components/ButtonFilter/style.scss
@@ -10,13 +10,16 @@
 
 
 
-.buttonFilter-menu.ant-dropdown-menu {
+.buttonFilter-menu {
     padding: 20px;
     width: 300px;
-    max-height: 700px;
-    max-height: 80vh;
+    // height: 600px;
+    max-height: 70vh;
     /* Thiết lập chiều cao tối đa */
     overflow-y: auto;
+    // z-index: 9999;
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, .15);
 
 
     .menu-animation {
