--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -24,6 +24,7 @@
 
             }
 
+            .header-brandMobile,
             .header-brand {
                 padding-left: 6px;
                 padding-right: 36px;
@@ -31,6 +32,10 @@
                 padding-bottom: 8px;
                 border-right: 1px solid #bbb;
                 ;
+            }
+
+            .header-brand {
+                display: none;
             }
 
             .header-span {
@@ -44,6 +49,8 @@
         .header-right {
             align-items: center;
 
+            .icon-moreMobile,
+            .header-iconMobile,
             .icon-more,
             .header-icon {
                 font-size: 25px;
@@ -53,6 +60,14 @@
                 padding-right: 10px;
                 padding-top: 8px;
                 padding-bottom: 10px;
+            }
+
+            .header-icon {
+                display: none;
+            }
+
+            .icon-moreMobile {
+                border-right: 1px solid #bbb;
             }
 
 
@@ -113,7 +128,9 @@
         .header-right {
             align-items: center;
 
+            .icon-moreMobile,
             .icon-more,
+            .header-iconMobile,
             .header-icon {
                 font-size: 25px;
                 color: #fff;
@@ -123,6 +140,12 @@
                 padding-top: 8px;
                 padding-bottom: 10px;
             }
+
+            .icon-moreMobile,
+            .icon-more {
+                display: none;
+            }
+
 
 
             .ant-image {
