--- a/src/components/PersonApproved/style.scss
+++ b/src/components/PersonApproved/style.scss
@@ -1,4 +1,6 @@
 .personApproved {
+    display: flex;
+
     table {
         border: 1px solid #ddd;
         border-collapse: collapse;
@@ -7,6 +9,7 @@
         text-align: center;
         margin-top: 10px;
         margin-bottom: 10px;
+        // margin-right: 20px;
 
         td {
             padding-top: 10px;
