--- a/src/pages/ViewDocument/style.scss
+++ b/src/pages/ViewDocument/style.scss
@@ -136,7 +136,38 @@
         padding-left: 20px;
         padding-right: 20px;
         padding-top: 60px;
+        width: 100%;
 
+        .viewtitle {
+            display: flex;
+
+            .viewtitle-status {
+                display: inline-block;
+                width: 40%;
+
+                .viewtitle-statusState,
+                .viewtitle-statusRcode {
+                    display: flex;
+
+                    >span {
+                        margin: 16px 0;
+                        padding-right: 5px;
+                    }
+                }
+
+                .viewtitle-statusState {
+                    width: 30%;
+                }
+
+
+
+
+            }
+
+
+
+
+        }
 
         .viewInput {
             display: flex;
@@ -212,28 +243,52 @@
         }
 
         .commentShow {
+            height: 100%;
 
             .commentGroup {
+                // height: 80px;
 
                 .commentParent {
                     width: 60%;
 
                     .comment-element {
+                        border-top: 1px solid #ccc;
                         display: flex;
                         // align-items: center;
                         padding: 10px 0;
+                        height: 61px;
+                        overflow-y: auto;
+                        overflow-x: unset;
+
 
                         .comment-avarta {
                             margin-right: 10px;
+                            margin-top: 15px;
                         }
 
                         .comment-body {
                             // margin-top: -10PX;
-                            width: 100%;
+                            width: 93%;
+
+                            span {
+                                font-size: 12px;
+
+                                color: #b4afb2;
+                            }
 
                             .comment-bodyTitle {
                                 font-weight: bold;
                                 margin-right: 20px;
+                                margin-top: -10px;
+                                font-size: 14px;
+
+                            }
+
+                            .comment-bodyComment {
+                                padding-top: 5px;
+                                overflow-wrap: break-word;
+                                overflow: auto;
+                                color: #b4afb2;
                             }
                         }
 
@@ -246,25 +301,38 @@
                     margin-left: 50px;
 
                     .comment-element {
+                        border-top: 1px solid #ccc;
                         display: flex;
                         // align-items: center;
                         padding: 10px 0;
+                        height: 61px;
+                        overflow: auto;
 
                         .comment-avarta {
                             margin-right: 10px;
+                            margin-top: 15px;
                         }
 
                         .comment-body {
                             // margin-top: -10PX;
-                            width: 100%;
+                            width: 93%;
                             margin-left: 10px;
                             overflow-x: auto;
-                            // overflow-y: auto;
+                            overflow: auto;
 
 
                             .comment-bodyTitle {
                                 font-weight: bold;
                                 margin-right: 20px;
+                                margin-top: -10px;
+                                font-size: 14px;
+                            }
+
+                            .comment-bodyComment {
+                                padding-top: 5px;
+                                overflow-wrap: break-word;
+                                overflow: auto;
+                                color: #b4afb2;
                             }
                         }
 
