--- a/src/components/ButtonSelect/style.scss
+++ b/src/components/ButtonSelect/style.scss
@@ -10,7 +10,8 @@
         justify-content: center;
         height: 50px;
         margin-top: 35PX;
-        width: calc(100%/8);
+        // width: calc(100%/8);
+        width: 120px;
         margin-left: 30PX;
 
     }
