--- a/src/pages/ViewDocument/style.scss
+++ b/src/pages/ViewDocument/style.scss
@@ -4,6 +4,33 @@
         padding-right: 20px;
         padding-top: 110px;
 
+        .viewtitle {
+            display: flex;
+            flex-direction: column;
+
+            .viewtitle-status {
+                display: inline-block;
+                width: 100%;
+
+                .viewtitle-statusState,
+                .viewtitle-statusRcode {
+                    display: flex;
+                    width: 100%;
+
+                    >span {
+                        // width: 100%;
+                        margin: 16px 0;
+                        padding-right: 5px;
+                    }
+                }
+
+            }
+
+            >h1 {
+                text-align: center;
+                width: 100%;
+            }
+        }
 
         .viewInput {
             display: flex;
@@ -12,22 +39,22 @@
 
             .viewInput-top {
                 padding-bottom: 20px;
-                display: flex;
+                // display: flex;
 
                 // justify-content: space-between;
                 .viewInput-element {
-                    width: 24%;
+                    width: 100%;
                     margin-right: 25px;
 
                 }
             }
 
             .viewInput-bot {
-                display: flex;
+                // display: flex;
                 // justify-content: space-between;
 
                 .viewInput-element {
-                    width: 24%;
+                    width: 100%;
                     margin-right: 20px;
                 }
             }
@@ -71,22 +98,50 @@
                 .commentParent {
                     width: 100%;
 
+
+
                     .comment-element {
+                        border-top: 1px solid #ccc;
                         display: flex;
                         // align-items: center;
-                        padding: 10px 0;
+                        // padding: 10px 0;
+                        height: 80px;
+
+                        // pad: 3px 0;
 
                         .comment-avarta {
                             margin-right: 10px;
+                            margin-top: 15px;
                         }
 
                         .comment-body {
                             // margin-top: -10PX;
-                            width: 100%;
+                            width: 93%;
+                            overflow-x: auto;
+
+
+                            span {
+                                font-size: 12px;
+
+                                color: #b4afb2;
+                            }
 
                             .comment-bodyTitle {
                                 font-weight: bold;
                                 margin-right: 20px;
+                                margin-top: -10px;
+                                font-size: 14px;
+
+                            }
+
+                            .comment-bodyComment {
+                                padding-top: 5px;
+                                color: #b4afb2;
+                                overflow-wrap: break-word;
+
+                                >a {
+                                    margin: 0 10px;
+                                }
                             }
                         }
 
@@ -99,25 +154,43 @@
                     margin-left: 50px;
 
                     .comment-element {
+                        border-top: 1px solid #ccc;
                         display: flex;
                         // align-items: center;
                         padding: 10px 0;
+                        height: 61px;
+                        overflow-x: auto;
+                        overflow-wrap: break-word;
 
                         .comment-avarta {
                             margin-right: 10px;
+                            margin-top: 15px;
                         }
 
                         .comment-body {
                             // margin-top: -10PX;
-                            width: 100%;
+                            width: 93%;
                             margin-left: 10px;
+                            // overflow-x: auto;
                             overflow-x: auto;
-                            // overflow-y: auto;
 
 
                             .comment-bodyTitle {
                                 font-weight: bold;
                                 margin-right: 20px;
+                                margin-top: -10px;
+                                font-size: 14px;
+                            }
+
+                            .comment-bodyComment {
+                                padding-top: 5px;
+                                overflow-wrap: break-word;
+                                // overflow-x: auto;
+                                color: #b4afb2;
+
+                                >a {
+                                    margin: 0 10px;
+                                }
                             }
                         }
 
@@ -255,10 +328,9 @@
                         border-top: 1px solid #ccc;
                         display: flex;
                         // align-items: center;
-                        padding: 10px 0;
-                        height: 61px;
-                        overflow-y: auto;
-                        overflow-x: unset;
+                        // padding: 10px 0;
+                        height: 80px;
+
 
 
                         .comment-avarta {
@@ -269,6 +341,8 @@
                         .comment-body {
                             // margin-top: -10PX;
                             width: 93%;
+                            overflow-x: auto;
+
 
                             span {
                                 font-size: 12px;
@@ -286,9 +360,12 @@
 
                             .comment-bodyComment {
                                 padding-top: 5px;
-                                overflow-wrap: break-word;
-                                overflow: auto;
                                 color: #b4afb2;
+                                overflow-wrap: break-word;
+
+                                >a {
+                                    margin: 0 10px;
+                                }
                             }
                         }
 
@@ -306,7 +383,8 @@
                         // align-items: center;
                         padding: 10px 0;
                         height: 61px;
-                        overflow: auto;
+                        overflow-x: auto;
+                        overflow-wrap: break-word;
 
                         .comment-avarta {
                             margin-right: 10px;
@@ -317,8 +395,8 @@
                             // margin-top: -10PX;
                             width: 93%;
                             margin-left: 10px;
+                            // overflow-x: auto;
                             overflow-x: auto;
-                            overflow: auto;
 
 
                             .comment-bodyTitle {
@@ -331,8 +409,12 @@
                             .comment-bodyComment {
                                 padding-top: 5px;
                                 overflow-wrap: break-word;
-                                overflow: auto;
+                                // overflow-x: auto;
                                 color: #b4afb2;
+
+                                >a {
+                                    margin: 0 10px;
+                                }
                             }
                         }
 
