--- a/src/components/InputSelection/style.scss
+++ b/src/components/InputSelection/style.scss
@@ -1,12 +1,15 @@
 .antd-select-container {
     display: flex;
     flex-direction: column;
-}
 
-.antd-select-container label {
-    margin-bottom: 5px;
-}
+    .bold-label {
+        font-weight: bold;
+        overflow: hidden;
+        height: 21px;
+        margin-bottom: 5px;
 
-.bold-label {
-    font-weight: bold;
+        .ant-select-selection-item {
+            overflow: hidden;
+        }
+    }
 }
