--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -207,6 +207,7 @@
             align-items: center;
             color: #FFFFFF;
             background-color: #2f85ef;
+            z-index: 1;
 
             >.anticon-arrow-left {
                 font-size: 24px;
@@ -225,6 +226,7 @@
             align-items: center;
             color: #FFFFFF;
             background-color: #2f85ef;
+            z-index: 1;
 
             >.anticon-arrow-left {
                 font-size: 24px;
