--- a/src/components/ButtonSelect/style.scss
+++ b/src/components/ButtonSelect/style.scss
@@ -1,46 +1,48 @@
-.approve-sign {
-    padding-top: 10px;
-    display: flex;
-    width: 100%;
-    // justify-content: space-between;
-    flex-flow: row wrap;
+@media (max-width:767px) {}
 
-    .btn-add {
-        text-align: center;
-        justify-content: center;
-        height: 50px;
-        margin-top: 35PX;
-        // width: calc(100%/8);
-        width: 120px;
-        margin-left: 30PX;
+@media (min-width:768px) {
 
-    }
-
-    .btn-selection-container {
-        padding-left: 30px;
-        padding-right: 30px;
+    .approve-sign {
+        padding-top: 10px;
         display: flex;
-        flex-direction: column;
-        width: calc(100%/4);
+        width: 100%;
+        flex-flow: row wrap;
 
+        .btn-add {
+            text-align: center;
+            justify-content: center;
+            height: 50px;
 
+            width: 120px;
+            margin-left: 30PX;
+            margin-top: 50px;
 
-        .label {
-            margin-bottom: 5px;
-            display: flex;
-            flex-direction: row;
-            font-weight: bold;
         }
 
-        .selection {
-            .ant-select {
-                width: 100%;
-                height: 50px;
+        .btn-selection-container {
+            padding-left: 30px;
+            display: flex;
+            flex-direction: column;
+            width: calc(100%/3.3);
+            margin-bottom: 20px;
+
+            .label {
+                margin-bottom: -5px;
+                display: flex;
+                flex-direction: row;
+                font-weight: bold;
+            }
+
+            .selection {
+                .ant-select {
+                    width: 100%;
+                    height: 50px;
+                }
+
+
             }
 
 
         }
-
-
     }
 }
