--- a/src/layouts/main/MainStyle.scss
+++ b/src/layouts/main/MainStyle.scss
@@ -1,6 +1,6 @@
 .layout-wrapper {
     height: 100vh;
-    min-width: 481px;
+    // min-width: 481px;
 
 
 
@@ -20,7 +20,7 @@
 
 @media (max-width:767px) {
     .layout-wrapper {
-        min-width: calc(100%/3);
+        // min-width: calc(100%/3);
         max-height: 100vh;
         width: 100%;
 
