--- a/src/components/ButtonSelect/style.scss
+++ b/src/components/ButtonSelect/style.scss
@@ -1,4 +1,3 @@
-
 @media (max-width:767px) {}
 
 .approve-sign {
@@ -16,6 +15,10 @@
         // width: calc(100%/8);
         width: 120px;
         margin-left: 30PX;
+    }
+}
+
+
 
 
 @media (min-width:768px) {
