--- a/src/pages/ViewDocument/style.scss
+++ b/src/pages/ViewDocument/style.scss
@@ -259,6 +259,7 @@
 
                 .viewtitle-statusState {
                     width: 30%;
+                    margin-top: -20px;
                 }
 
 
