--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -128,6 +128,7 @@
         .header-right {
             align-items: center;
 
+
             .icon-moreMobile,
             .icon-more,
             .header-iconMobile,
@@ -139,6 +140,12 @@
                 padding-right: 10px;
                 padding-top: 8px;
                 padding-bottom: 10px;
+            }
+
+            .header-user {
+                font-size: 25px;
+                color: #fff;
+                padding-top: 2px;
             }
 
             .icon-moreMobile,
