--- a/src/components/Test/style.scss
+++ b/src/components/Test/style.scss
@@ -1,12 +1,9 @@
-.modalSubmit {
-    background-color: #4ba747;
-    color: #ffffff;
-    border-color: #4ba747;
+.triangle {
 
-}
-
-.modalCancel {
-    background-color: #5bc0de;
-    color: #ffffff;
-    border-color: #5bc0de;
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 0px solid transparent;
+    border-top: 50px solid red;
+    border-bottom: 50px solid red;
 }
