--- a/src/components/ButtonSelect/style.scss
+++ b/src/components/ButtonSelect/style.scss
@@ -13,17 +13,35 @@
             width: 120px;
             margin-left: 30PX;
             margin-top: 50px;
+
+        }
+
+        .btn-selection-container {
+            padding-left: 30px;
+            display: flex;
+            flex-direction: column;
+            width: calc(100%/3.3);
+            margin-bottom: 20px;
+
+            .label {
+                margin-bottom: -5px;
+                display: flex;
+                flex-direction: row;
+                font-weight: bold;
+            }
+
+            .selection {
+                .ant-select {
+                    width: 100%;
+                    height: 50px;
+                }
+            }
         }
     }
-
-    .btn-selection-container {
-        padding-left: 30px;
-        display: flex;
-        flex-direction: column;
-        width: calc(100%/3.3);
-        margin-bottom: 20px;
-    }
 }
+
+
+
 
 @media (min-width:768px) {
 
@@ -63,15 +81,6 @@
                     width: 100%;
                     height: 50px;
                 }
-
-
-            }
-
-            .label {
-                margin-bottom: -5px;
-                display: flex;
-                flex-direction: row;
-                font-weight: bold;
             }
         }
     }
