--- a/src/pages/EditDocument/style.scss
+++ b/src/pages/EditDocument/style.scss
@@ -13,10 +13,11 @@
                 .editInput-top {
                     padding-bottom: 20px;
                     display: flex;
+                    flex-direction: column;
 
                     // justify-content: space-between;
                     .editInput-element {
-                        width: 24%;
+                        width: 100%;
                         margin-right: 25px;
 
                     }
@@ -24,10 +25,12 @@
 
                 .editInput-bot {
                     display: flex;
+                    flex-direction: column;
+
                     // justify-content: space-between;
 
                     .editInput-element {
-                        width: 24%;
+                        width: 100%;
                         margin-right: 20px;
                     }
                 }
@@ -50,13 +53,7 @@
 
         .editSignapproval-container {
             padding: 20px;
-
-
-
         }
-
-
-
     }
 
     @media (min-width:768px) {
@@ -86,18 +83,7 @@
                     .edittitle-statusState {
                         width: 30%;
                     }
-
-
-
-
                 }
-
-                >h1 {
-                    // padding-left: 250px;
-
-                }
-
-
             }
 
             .editInput {
@@ -112,7 +98,7 @@
                     // justify-content: space-between;
                     .editInput-element {
                         width: 24%;
-                        margin-right: 25px;
+                        margin-right: 20px;
 
                     }
                 }
